--- a/css/styles.css
+++ b/css/styles.css
@@ -74,4 +74,11 @@ h1, h2, h3, p {
     opacity: 0.7;
 }
 
+footer {
+    clear: both;
+    position: relative;
+    margin-top: 200px;
+    text-align: center;
+}
+
 
