--- a/css/styles.css
+++ b/css/styles.css
@@ -87,11 +87,14 @@ h1, h2, h3, p {
     opacity: 0.7;
 }
 
-footer {
+.footer {
     clear: both;
     position: relative;
     margin-top: 200px;
     text-align: center;
+    background-color: black;
+    color: white;
+    height: 100px;
 }
 
 
