--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,8 @@ body {
     justify-content: center;
     align-items: center;
     height: 1000px;
+    padding: 0px;
+    margin: 0px;
 }
 .navbar{
     display: flex;
